# speechlab

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: ci.yml
backend/api/: main.py
backend/api/endpoints/: auth.py  evaluation.py  experiments.py  health.py  inference.py  mlflow.py  models.py  training.py
backend/auth/: __init__.py  authentication.py  dependencies.py
backend/core/: config.py  logging.py  redis_client.py  utils.py
backend/evaluation/: evaluator.py  metrics.py  regression.py
backend/tracking/: __init__.py  mlflow_tracker.py
backend/training/: models.py  ray_trainer.py  speech_trainer.py  trainer.py
configs/experiments/: baseline_whisper.yaml  demo_whisper_tiny.yaml
docker/: Dockerfile.backend
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/playground/: page.tsx
frontend/components/: ErrorAnalysisModal.tsx  ExperimentList.tsx  MetricCard.tsx  NewExperimentModal.tsx  RegressionAlert.tsx  SettingsModal.tsx  SystemStatus.tsx  TrainingChart.tsx
frontend/components/ui/: dialog.tsx
scripts/: evaluate.py  train.py
tests/: test_api.py  test_data.py  test_regression.py
